Update tats.json to work for backend

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -107,6 +107,55 @@
         "cwd": "${workspaceFolder}/frontend"
       },
       "problemMatcher": []
+    },
+    {
+      "label": "Backend: Install dependencies (npm i)",
+      "type": "shell",
+      "command": "npm",
+      "args": ["install"],
+      "options": {
+        "cwd": "${workspaceFolder}/backend"
+      },
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "shared",
+        "clear": true
+      }
+    },
+    {
+      "label": "Backend: Dev server (npm run dev)",
+      "type": "shell",
+      "command": "npm",
+      "args": ["run", "dev"],
+      "options": {
+        "cwd": "${workspaceFolder}/backend"
+      },
+      "isBackground": true,
+      "problemMatcher": [
+        {
+          "owner": "nodemon",
+          "pattern": {
+            "regexp": "^(.*)$",
+            "message": 1
+          },
+          "background": {
+            "activeOnStart": true,
+            "beginsPattern": ".*",
+            "endsPattern": "server listening on port"
+          }
+        }
+      ],
+      "dependsOn": ["Backend: Install dependencies (npm i)"],
+      "group": {
+        "kind": "build",
+        "isDefault": false
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
     }
   ]
 }
