--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.7",
+    "onnxruntime-node": "^1.23.2",
+    "sharp": "^0.34.5",
     "zod": "^3.23.8"
   }
 }
