fix vercel json again

--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,16 @@
   ],
   "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/backend/src/server.js"
+      "source": "/api/(.*)",
+      "destination": "/backend/src/server.js"
     },
     {
-      "src": "/uploads/(.*)",
-      "dest": "/backend/src/server.js"
+      "source": "/uploads/(.*)",
+      "destination": "/backend/src/server.js"
     },
     {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
